[package]
name = "material"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["material"]
description = "scene renderer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-material.git"
homepage = "https://github.com/nathanfaucett/rs-material"

[dependencies]
uuid = {version = "0.2", features = ["v4"]}
shader = {git = "https://github.com/nathanfaucett/rs-shader.git"}
gl_context = {git = "https://github.com/nathanfaucett/rs-gl_context.git"}
shared = {git = "https://github.com/nathanfaucett/rs-shared.git"}
hash_map = {git = "https://github.com/nathanfaucett/rs-hash_map.git"}
